Fixed table clipping.

--- a/html/resources/css/style.css
+++ b/html/resources/css/style.css
@@ -364,7 +364,7 @@ section#results hr {
 table {
   overflow-y: auto;
   width: 100%;
-  height: 100%;
+  height: 95%;
   display: block;
 }
 
